# weather-app

./: .gitignore  Cargo.toml  README.md  render.yaml
.github/agents/: rust-web-expert.agent.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  README.md  index.html  next.config.ts  package-lock.json  package.json
frontend/scripts/: build-desktop.mjs
frontend/src/: main.rs
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
shared/: Cargo.toml
shared/src/: lib.rs
